<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/white"
    tools:context=".SecondActivity">

    <!-- Лого -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginTop="10pt">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/realAppName1"
            android:textSize="27sp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_marginVertical="1pt"
            android:layout_marginEnd="2pt"
            android:layout_marginStart="40pt"
            android:gravity="end|center"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:text="@string/realAppName2"
            android:textSize="28sp"
            android:background="@drawable/rectangle_background"
            android:textColor="@color/yellow"
            android:layout_marginVertical="1pt"
            android:layout_marginEnd="45pt"
            android:gravity="center"/>
    </LinearLayout>

    <!-- Инфа юзера -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:gravity="end|center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNameAndSurname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/name"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="10pt"/>

        <TextView
            android:id="@+id/textViewTel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/telephoneNumber"
            android:layout_weight="1"
            android:layout_marginVertical="3pt"
            android:gravity="start|center"
            android:textSize="10pt" />

    </LinearLayout>

    <!-- Кнопка ввода маршрута -->
    <Button
        android:id="@+id/buttonSetPath"
        android:text="@string/butSetPath"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:height="30pt"
        android:width="60pt"
        android:layout_weight="2"
        android:layout_marginHorizontal="30pt"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <!-- Инфа по поездке -->
    <TextView
        android:id="@+id/textViewRideData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="9pt"
        android:layout_marginVertical="10pt"
        android:layout_marginHorizontal="5pt"
        android:text="@string/telephone"
        android:textColor="@color/black"
        android:gravity="start|center_vertical"
        android:visibility="invisible"/>

    <!-- Кнопка вызова такси -->
    <Button
        android:id="@+id/buttonCallTaxi"
        android:text="@string/butCallTaxi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:height="30pt"
        android:width="60pt"
        android:layout_weight="2"
        android:layout_marginHorizontal="30pt"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:textSize="24sp"
        android:textStyle="bold"/>

</LinearLayout>