<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/third"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".ThirdActivity">

    <!-- Лого -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1pt"
            android:layout_marginStart="40pt"
            android:layout_marginEnd="2pt"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="end|center"
            android:text="@string/realAppName1"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="1pt"
            android:layout_marginEnd="45pt"
            android:layout_weight="2"
            android:background="@drawable/rectangle_background"
            android:gravity="center"
            android:text="@string/realAppName2"
            android:textColor="@color/yellow"
            android:textSize="28sp" />
    </LinearLayout>

    <!-- Инфа юзера -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_weight="1"
        android:gravity="end|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:text="@string/pointFrom"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextStreetFrom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3pt"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/street"
            android:inputType="text"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextHouseFrom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/house"
            android:inputType="text"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextFlatFrom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3pt"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/flat"
            android:inputType="text"
            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:layout_weight="1"
        android:gravity="end|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:text="@string/pointTo"
            android:textColor="@color/black"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextStreetTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3pt"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/street"
            android:inputType="text"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextHouseTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/house"
            android:inputType="text"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/editTextFlatTo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="3pt"
            android:layout_weight="1"
            android:gravity="start|center"
            android:hint="@string/flat"
            android:inputType="text"
            android:textSize="10pt" />
    </LinearLayout>

    <!-- Кнопка заказа -->
    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30pt"
        android:layout_marginVertical="15pt"
        android:width="60pt"
        android:height="30pt"
        android:backgroundTint="@color/yellow"
        android:text="@string/butOk"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Шашечки внизу страницы -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="4"
        android:contentDescription="@string/taxi_checkers_description"
        android:src="@drawable/taxi_checkers" />

</LinearLayout>